Added .atk-show / .atk-hide.

--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -105,6 +105,12 @@ a {
 .atk-overflow {
   overflow: hidden;
 }
+.atk-show {
+  display: block !important;
+}
+.atk-hide {
+  display: none !important;
+}
 
 
 // ==========================================================
