--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -48,15 +48,15 @@ body {
   }
 }
 *[class*=atk-border-outline] {
-    &, &[class*=atk-swatch]:not(.atk-text-inherit), &[class*=atk-box] {
+    &, &[class*=atk-swatch]:not(.atk-text-inherit), &[class*=atk-box], &[class*=atk-button] {
         background: none;
-        border-width: 0.1em;
+        border-width: 0.1em !important;
         border-style: solid;
         &.atk-border-outline-small {
-            border-width: 0.05em;
+            border-width: 0.05em !important;
         }
         &.atk-border-outline-large {
-            border-width: 0.2em;
+            border-width: 0.2em !important;
         }
     }
 }
