--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -467,6 +467,23 @@ ul[class*=atk-menu] {
     vertical-align: bottom !important;
 }
 
+// Spacing
+.atk-spacing-xsmall {
+    height: @margin/4;
+}
+.atk-spacing-small {
+    height: @margin/2;
+}
+.atk-spacing {
+    height: @margin;
+}
+.atk-spacing-large {
+    height: @margin*2;
+}
+.atk-spacing-xlarge {
+    height: @margin*4;
+}
+
 // Pushes
 *[class*=atk-pull] {
     &.atk-pull-xsmall {
