--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -107,6 +107,10 @@ h6, small, .atk-size-milli {
 .atk-text-italic {
     font-style: italic;
 }
+.atk-text-caps {
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+}
 .atk-text-dimmed {
     &, *[class*=atk-swatch] & {
         color: @textDimmed;
