Change in table borders.

--- a/framework/less/jqueryui.less
+++ b/framework/less/jqueryui.less
@@ -313,7 +313,7 @@
         }
         &.ui-dialog-content {
             overflow: auto;
-            padding: round(@margin/2,2) @margin @margin @margin;
+            padding: @margin;
         }
     }
 }
