--- a/framework/less/mixins.less
+++ b/framework/less/mixins.less
@@ -82,6 +82,12 @@
     ._getProp(@property);
   }
 }
+.filler(@z: 1) {
+  .position(@t:0, @l:0);
+  height: 100%;
+  width: 100%;
+  z-index: @z;
+}
 
 // Layouts
 .flex() {
