--- a/playground/css/playground-theme.css
+++ b/playground/css/playground-theme.css
@@ -2811,13 +2811,13 @@ a:focus {
 .atk-table table tbody tr td.atk-table-row-icon {
   position: absolute;
   left: 100%;
+  background: none !important;
   border-color: transparent;
-  margin-top: -1px;
   opacity: 0;
   vertical-align: middle;
 }
 .atk-table table tbody tr:hover td.atk-table-row-icon {
-  border: none;
+  background: none !important;
   opacity: 1;
 }
 .atk-table > *[class*=atk-box]:first-child {
@@ -3259,44 +3259,44 @@ input.ui-button:hover {
   border: 1px solid #c8c8c8;
   color: #000;
 }
-a[class*='atk-button']:not([class*=atk-section]),
-button[class*='atk-button']:not([class*=atk-section]),
-input[class*='atk-button']:not([class*=atk-section]),
-a.ui-button:not([class*=atk-section]),
-button.ui-button:not([class*=atk-section]),
-input.ui-button:not([class*=atk-section]) {
+a[class*='atk-button']:not([class*=atk-padding]),
+button[class*='atk-button']:not([class*=atk-padding]),
+input[class*='atk-button']:not([class*=atk-padding]),
+a.ui-button:not([class*=atk-padding]),
+button.ui-button:not([class*=atk-padding]),
+input.ui-button:not([class*=atk-padding]) {
   padding: 0.5em 1em;
 }
-a[class*='atk-button']:not([class*=atk-section]).atk-button-xsmall,
-button[class*='atk-button']:not([class*=atk-section]).atk-button-xsmall,
-input[class*='atk-button']:not([class*=atk-section]).atk-button-xsmall,
-a.ui-button:not([class*=atk-section]).atk-button-xsmall,
-button.ui-button:not([class*=atk-section]).atk-button-xsmall,
-input.ui-button:not([class*=atk-section]).atk-button-xsmall {
+a[class*='atk-button']:not([class*=atk-padding]).atk-button-xsmall,
+button[class*='atk-button']:not([class*=atk-padding]).atk-button-xsmall,
+input[class*='atk-button']:not([class*=atk-padding]).atk-button-xsmall,
+a.ui-button:not([class*=atk-padding]).atk-button-xsmall,
+button.ui-button:not([class*=atk-padding]).atk-button-xsmall,
+input.ui-button:not([class*=atk-padding]).atk-button-xsmall {
   padding: 0.12em 0.25em;
 }
-a[class*='atk-button']:not([class*=atk-section]).atk-button-small,
-button[class*='atk-button']:not([class*=atk-section]).atk-button-small,
-input[class*='atk-button']:not([class*=atk-section]).atk-button-small,
-a.ui-button:not([class*=atk-section]).atk-button-small,
-button.ui-button:not([class*=atk-section]).atk-button-small,
-input.ui-button:not([class*=atk-section]).atk-button-small {
+a[class*='atk-button']:not([class*=atk-padding]).atk-button-small,
+button[class*='atk-button']:not([class*=atk-padding]).atk-button-small,
+input[class*='atk-button']:not([class*=atk-padding]).atk-button-small,
+a.ui-button:not([class*=atk-padding]).atk-button-small,
+button.ui-button:not([class*=atk-padding]).atk-button-small,
+input.ui-button:not([class*=atk-padding]).atk-button-small {
   padding: 0.25em 0.5em;
 }
-a[class*='atk-button']:not([class*=atk-section]).atk-button-large,
-button[class*='atk-button']:not([class*=atk-section]).atk-button-large,
-input[class*='atk-button']:not([class*=atk-section]).atk-button-large,
-a.ui-button:not([class*=atk-section]).atk-button-large,
-button.ui-button:not([class*=atk-section]).atk-button-large,
-input.ui-button:not([class*=atk-section]).atk-button-large {
+a[class*='atk-button']:not([class*=atk-padding]).atk-button-large,
+button[class*='atk-button']:not([class*=atk-padding]).atk-button-large,
+input[class*='atk-button']:not([class*=atk-padding]).atk-button-large,
+a.ui-button:not([class*=atk-padding]).atk-button-large,
+button.ui-button:not([class*=atk-padding]).atk-button-large,
+input.ui-button:not([class*=atk-padding]).atk-button-large {
   padding: 0.75em 1.5em;
 }
-a[class*='atk-button']:not([class*=atk-section]).atk-button-xlarge,
-button[class*='atk-button']:not([class*=atk-section]).atk-button-xlarge,
-input[class*='atk-button']:not([class*=atk-section]).atk-button-xlarge,
-a.ui-button:not([class*=atk-section]).atk-button-xlarge,
-button.ui-button:not([class*=atk-section]).atk-button-xlarge,
-input.ui-button:not([class*=atk-section]).atk-button-xlarge {
+a[class*='atk-button']:not([class*=atk-padding]).atk-button-xlarge,
+button[class*='atk-button']:not([class*=atk-padding]).atk-button-xlarge,
+input[class*='atk-button']:not([class*=atk-padding]).atk-button-xlarge,
+a.ui-button:not([class*=atk-padding]).atk-button-xlarge,
+button.ui-button:not([class*=atk-padding]).atk-button-xlarge,
+input.ui-button:not([class*=atk-padding]).atk-button-xlarge {
   padding: 1em 2em;
 }
 a[class*='atk-button'].atk-button-blank,
@@ -3608,13 +3608,13 @@ ul[class*=atk-menu].atk-menu-vertical > li *[class*=atk-menu]:not(.atk-menu-sepa
   float: right;
 }
 .atk-align-left {
-  text-align: left;
+  text-align: left !important;
 }
 .atk-align-right {
-  text-align: right;
+  text-align: right !important;
 }
 .atk-align-center {
-  text-align: center;
+  text-align: center !important;
 }
 .atk-cells-group.atk-valign-top > .atk-cells > .atk-cell,
 .atk-valign-top,
