--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -46,6 +46,9 @@ body {
   &.atk-border-overlay {
     border-color: @borderOverlay;
   }
+  &.atk-border-reset {
+    border-width: 0;
+  }
 }
 *[class*=atk-border-outline] {
     &, &[class*=atk-swatch]:not(.atk-text-inherit), &[class*=atk-box], &[class*=atk-button] {
